--- a/css/navbar-admin.css
+++ b/css/navbar-admin.css
@@ -249,16 +249,15 @@
     z-index: 9;
     min-width: 45px;
     min-height: 45px;
-    background-color: var(--bg-color);
+    background-color: var(--lightpinkcolor);
     border-radius: var(--border-radius-5);
-    box-shadow: 0px 0px 25px rgb(0 0 0 / 10%);
     border: 1px solid var(--bordercolor);
     cursor: pointer;
     margin-right: 15px;
     display: none;
 }
 .toggle-menu-icon span {
-    color: var(--graycolor);
+    color: var(--whitecolor);
     font-size: 28px;
     position: absolute;
     top: 50%;
