--- a/css/navbar-admin.css
+++ b/css/navbar-admin.css
@@ -235,6 +235,90 @@
     color: var(--graycolor);
     font-size: 24px;
 }
+.icon-box:after {
+    display: none !important;
+}
+
+/* Notification Dropdown css start */
+
+.unread-msg-batch {
+    position: relative;
+    padding-right: 20px;
+}
+.unread-msg-batch::after {
+    content: "2";
+    background-color: var(--lightpinkcolor);
+    width: 15px;
+    height: 15px;
+    font-size: 10px;
+    padding: 5px;
+    position: absolute;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    right: 0;
+    top: 0;
+}
+.notification-header {
+    background-color: #6597FF;
+    display: flex;
+    justify-content: space-between;
+    padding: 15px;    
+    color: #fff;
+}
+.notification-body.notificaction-main-div {
+    max-height: 350px;
+    height: 100%;
+    overflow-y: scroll;
+}
+.notofication-items {
+    display: flex;
+    border-bottom: 1px solid #E1E1E1;
+    padding: 15px;
+}
+.notofication-items:hover {
+    background-color: var(--bg-color);
+}
+.notofication-items:last-child {
+    border-bottom: unset ;
+}
+.notification-img img {
+    width: 30px !important;
+    height: 30px;
+    border-radius: 100%;
+    margin-right: 15px;
+}
+.notification-msg .title {
+    font-size: 16px;
+    color: #000;
+    margin: 0;
+}
+.notification-msg .desc {
+    font-size: 14px;
+    color: #999999;
+    padding: 5px 0;
+    margin: 0;
+}
+.notification-msg .date-time {
+    font-size: 12px;
+    color: #999999;
+}
+.notification-footer {
+    padding: 15px;
+    border-top: 1px solid #E1E1E1;
+}
+.dropdown-menu.show {
+    top: 20px !important;
+    border: none;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
+    border-radius: 5px;
+    width: 350px;
+    padding: 0;
+}
+
+/* Notification Dropdown css end  */
+
 .notification-point {
     height: 10px;
     width: 10px;
